<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaLibraryFragment">

    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.example.playlistmaker.presentation.medialibrary.MediaLibraryFragment"
        android:label="@string/main_media" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.presentation.search.SearchFragment"
        android:label="@string/main_search" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.presentation.settings.SettingsFragment"
        android:label="@string/main_settings" />

    <fragment
        android:id="@+id/audioPlayerFragment"
        android:name="com.example.playlistmaker.presentation.player.AudioPlayerFragment"
        android:label="@string/track_cover" />
</navigation>