<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_confirm_dialog"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="20dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/delete_playlist"
        android:textColor="#1A1B22"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:includeFontPadding="false"
        android:text="@string/delete_playlist_confirmation"
        android:textColor="#1A1B22"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnDialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/cancel"
            android:textColor="#3772E7"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnDialogDelete"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/delete"
            android:textColor="#3772E7"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>