<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:padding="@dimen/screen_padding">

    <!-- Back icon -->
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/settings_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/settings_title"
        android:textColor="@color/text_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        app:layout_constraintBottom_toBottomOf="@id/btnBack" />

    <!-- Dark theme -->
    <TextView
        android:id="@+id/tvDarkTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/settings_dark_theme"
        android:textColor="@color/text_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/switchTheme"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvDarkTheme"
        app:layout_constraintBottom_toBottomOf="@id/tvDarkTheme" />

    <!-- Share app -->
    <TextView
        android:id="@+id/tvShare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/settings_share_app"
        android:textColor="@color/text_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iconShare"
        app:layout_constraintTop_toBottomOf="@id/tvDarkTheme" />

    <ImageView
        android:id="@+id/iconShare"
        android:layout_width="@dimen/settings_icon_size"
        android:layout_height="@dimen/settings_icon_size"
        android:src="@drawable/ic_share"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvShare"
        app:layout_constraintBottom_toBottomOf="@id/tvShare" />

    <!-- Support -->

    <TextView
        android:id="@+id/tvSupport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/settings_support"
        android:textColor="@color/text_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iconSupport"
        app:layout_constraintTop_toBottomOf="@id/tvShare"
        />

    <ImageView
        android:id="@+id/iconSupport"
        android:layout_width="@dimen/settings_icon_size"
        android:layout_height="@dimen/settings_icon_size"
        android:src="@drawable/ic_support"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvSupport"
        app:layout_constraintBottom_toBottomOf="@id/tvSupport" />


    <!-- Agreement -->
    <TextView
        android:id="@+id/tvAgreement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/settings_agreement"
        android:textColor="@color/text_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iconArrow"
        app:layout_constraintTop_toBottomOf="@id/tvSupport" />

    <ImageView
        android:id="@+id/iconArrow"
        android:layout_width="@dimen/settings_icon_size"
        android:layout_height="@dimen/settings_icon_size"
        android:src="@drawable/ic_chevron_right"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvAgreement"
        app:layout_constraintBottom_toBottomOf="@id/tvAgreement" />





</androidx.constraintlayout.widget.ConstraintLayout>
